RESOLVED FIXED156379
Fix leaks in WebAVMediaSelectionOptionMac and WebPlaybackControlsManager
https://bugs.webkit.org/show_bug.cgi?id=156379
Summary Fix leaks in WebAVMediaSelectionOptionMac and WebPlaybackControlsManager
Beth Dakin
Reported 2016-04-07 17:07:07 PDT
Fix leaks in WebAVMediaSelectionOptionMac and WebPlaybackControlsManager
Attachments
Patch (6.04 KB, patch)
2016-04-07 17:09 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2016-04-07 17:09:16 PDT
Beth Dakin
Comment 2 2016-04-08 11:32:43 PDT
Beth Dakin
Comment 3 2016-04-08 11:32:52 PDT
Thanks Tim!
Note You need to log in before you can comment on or make changes to this bug.